// Vitest Snapshot v1

exports[`errors > when argument missing (last position) 1`] = `"Missing argument"`;

exports[`errors > when argument missing (non-last position) 1`] = `"Missing argument"`;

exports[`errors > when flag passed twice 1`] = `"Duplicate flag \\"name\\""`;

exports[`errors > when long and short flag passed  1`] = `"Duplicate flag \\"n\\""`;

exports[`zod > validation > cuid 1`] = `
"Invalid value for name:
Value is not a cuid."
`;

exports[`zod > validation > datetime 1`] = `
"Invalid value for name:
Value is not a conforming datetime."
`;

exports[`zod > validation > datetime no offset 1`] = `
"Invalid value for name:
Value is not a conforming datetime."
`;

exports[`zod > validation > datetime precision 1 1`] = `
"Invalid value for name:
Value is not a conforming datetime."
`;

exports[`zod > validation > email 1`] = `
"Invalid value for name:
Value is not an email address."
`;

exports[`zod > validation > endsWith 1`] = `
"Invalid value for name:
Value does not end with x."
`;

exports[`zod > validation > length 1`] = `
"Invalid value for name:
Value does not have the length 1."
`;

exports[`zod > validation > max 1`] = `
"Invalid value for name:
Value is too long."
`;

exports[`zod > validation > min 1`] = `
"Invalid value for name:
Value is too short."
`;

exports[`zod > validation > regex 1`] = `
"Invalid value for name:
Value does not conform to Regular Expression."
`;

exports[`zod > validation > startsWith 1`] = `
"Invalid value for name:
Value does not start with y."
`;

exports[`zod > validation > url 1`] = `
"Invalid value for name:
Value is not a URL."
`;

exports[`zod > validation > uuid 1`] = `
"Invalid value for name:
Value is not a uuid."
`;
